ajuste de layout a4

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//WebContent/pages/reports/cheque/cheque.jrxml=UTF-8
+encoding//WebContent/pages/reports/cheque/chequea4.jrxml=UTF-8
